# SmalltalkVMs

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
includes/: CMakeLists.txt  SpecialClassIndexes.h  cTestCase.h  headerFormatValues.h  memoryModel.h  memorySpace.h  oop.h
src/: CMakeLists.txt  cTestCase.cpp  main.cpp  memorySpace.cpp  smalltalkVM.cpp
templates/: CMakeLists.txt  allocator.hpp  cmake  garbageCollector.hpp  memoryModel.cpp  memoryModel.h  memorySpace.hpp  oop.hpp  oopBuilder.hpp  oopHeader.hpp  oopMock.hpp
templates/pharoMemoryModel/: immediateOop.hpp
tests/: CMakeLists.txt  testAllocatingNewMemorySpace.cpp
tests/testAllocator/: CMakeLists.txt  testAllocateFirstObject.cpp  testAllocateObjectThatFitInHole.cpp  testAllocateTwoObjectsFillsTheSpace.cpp  testAllocateTwoObjectsFirstObjectIsNotOverriden.cpp  testAllocateTwoObjectsHasTwoObjects.cpp  testAllocateTwoObjectsSecondObjectHasCorrectNumberOfSlots.cpp  testAllocateTwoObjectsSecondObjectIsNotFree.cpp  testMovedFreeObjectHasLessSlots.cpp  testMovedFreeObjectIsAfterFirst.cpp
tests/testGarbageCollection/: CMakeLists.txt  testGarbageCollectionCompactsFreeOopReclaimedAfterAFreeOop.cpp  testGarbageCollectionCompactsFreeOopReclaimedBeforeAFreeOop.cpp  testGarbageCollectionCompactsFreeOops.cpp  testGarbageCollectionCreatesHole.cpp  testGarbageCollectionDoesNotReclaimRoots.cpp  testGarbageCollectionDoesNotReclaimSlotOfRoot.cpp  testGarbageCollectionReclaimsAllObjectsWithoutRoots.cpp  testMarkRoots.cpp  testMarkSlotOfRoot.cpp  testSweepClearsMarketBit.cpp
tests/testMemoryModel/: CMakeLists.txt  testClassIndex.cpp  testFormat.cpp  testGreyBit.cpp  testHash.cpp  testImmutableBit.cpp  testMarkedBit.cpp  testNotClassIndex.cpp  testNotFormat.cpp  testNotGreyBit.cpp  testNotHash.cpp  testNotImmutableBit.cpp  testNotMarkedBit.cpp  testNotNumberOfSlots.cpp  testNotPinnedBit.cpp  testNotRememberedBit.cpp  testNumberOfSlots.cpp  testPinnedBit.cpp  testRememberedBit.cpp  testResetHeaderResetsHeader.cpp  testSetClassIndex.cpp  testSetFormat.cpp  testSetGreyBit.cpp  testSetHash.cpp  testSetImmutableBit.cpp  testSetMarkedBit.cpp  testSetNumberOfSlots.cpp  testSetPinnedBit.cpp  testSetRememberedBit.cpp
tests/testMemorySpace/: CMakeLists.txt  testAllocatingNewMemorySpaceDynamically.cpp  testAllocatingNewMemorySpaceStatically.cpp  testBitSpaceSize.cpp  testBitSpaceSizeOnUninitializedMemory.cpp  testByteSpaceSize.cpp  testByteSpaceSizeOnUninitializedMemory.cpp  testDefaultMemoryIsUninitialized.cpp  testFailledAllocationCreatesUninitializedMemory.cpp  testMemorySizeIsAskedSize.cpp  (+8 more)
(+7 files in other folders)
